// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareButtons renders the title if given 1`] = `
<div
  className="ShareButtons"
>
  <WithStyles(Typography)
    align="center"
    variant="subtitle2"
  >
    The title
  </WithStyles(Typography)>
  <WithMixpanel
    drawType="groups"
    key="facebook"
    socialType="facebook"
    url="the_cool_url"
  />
  <WithMixpanel
    drawType="groups"
    key="twitter"
    socialType="twitter"
    url="the_cool_url"
  />
  <WithMixpanel
    drawType="groups"
    key="telegram"
    socialType="telegram"
    url="the_cool_url"
  />
  <WithMixpanel
    drawType="groups"
    key="whatsapp"
    socialType="whatsapp"
    url="the_cool_url"
  />
</div>
`;

exports[`ShareButtons should only render the specified types 1`] = `
<div
  className="ShareButtons"
>
  <WithMixpanel
    drawType="groups"
    key="facebook"
    socialType="facebook"
    url="the_cool_url"
  />
</div>
`;

exports[`ShareButtons should render all buttons by default 1`] = `
<div
  className="ShareButtons"
>
  <WithMixpanel
    drawType="groups"
    key="facebook"
    socialType="facebook"
    url="the_cool_url"
  />
  <WithMixpanel
    drawType="groups"
    key="twitter"
    socialType="twitter"
    url="the_cool_url"
  />
  <WithMixpanel
    drawType="groups"
    key="telegram"
    socialType="telegram"
    url="the_cool_url"
  />
  <WithMixpanel
    drawType="groups"
    key="whatsapp"
    socialType="whatsapp"
    url="the_cool_url"
  />
</div>
`;
